tests/fixtures/semantics/valid/storage_element_level_ok.ora
storage var S1: struct { x: u256, y: u256 };
storage var S2: struct { x: u256, y: u256 };
storage var M1: map[u256, u256];
storage var M2: map[u256, u256];

fn f() -> void {
    S1.x = S2.x;     // element-level ok
    M1[0] = M2[1];   // element-level ok
}


